@@ -2998,6 +2998,12 @@ current version of SOGo from the previous release.
 
 [cols="100a"]
 |=======================================================================
+h|3.3.0
+|Run the shell script `sql-update-3.2.10_to_3.3.0.sh` if you are using MySQL.
+
+This will grow the "defaults" and "setting" fields of the SOGo user profile table
+to a larger size.
+
 h|2.3.1
 |The SOGoCalendarDefaultCategoryColor default has been removed. If you
 want to customize the color of calendar categories, use the
