@@ -10,6 +10,7 @@ Enhancements
 
 Bug fixes
  - [core] yearly repeating events are not shown in web calendar (#4237)
+ - [core] increased column size of settings/defaults for MySQL (#4260)
  - [web] fixed display of error when the mail editor is in a popup
  - [web] attachments are not displayed on IOS (#4150)
 
